--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-LEGENDASTV_USR=
-LEGENDASTV_PWD=
-OPENSUBTITLES_USR=
-OPENSUBTITLES_PWD=
+export LEGENDASTV_USR=
+export LEGENDASTV_PWD=
+export OPENSUBTITLES_USR=
+export OPENSUBTITLES_PWD=
